# Retail-OS-Object-Detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RetailsOS_Colab.ipynb  RetailsOS_Reproduction.ipynb  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-build.yml
airflow/dags/: drift_monitor.py  ml_pipeline.py
experiments/: experiment_log.json
frontend/: app.js  index.html  style.css
models/: model_card.md
notebooks/: 01_preprocessing.ipynb  02_training.ipynb
src/: config.py
src/api/: main.py  routes.py  schemas.py
src/inference/: detector.py  share_of_shelf.py
src/monitoring/: drift_config.py  drift_detector.py
