[project]
name = "retail-shelf-detection"
version = "1.0.0"
description = "YOLOv11-based retail shelf product detection with MLOps pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
